<resources>
    <string name="app_name">BMICalculatorC007サンプル</string>
    <string name="tv_title">BMI計算機</string>
    <string name="tv_age">年齢</string>
    <string name="tv_age1">歳</string>
    <string name="tv_height">身長</string>
    <string name="tv_height1">cm</string>
    <string name="tv_wight">体重</string>
    <string name="tv_wight1">kg</string>
    <string name="bt_keisan">計算</string>
    <string name="bt_clear">クリア</string>
</resources>